# accelerator-rag

./: .gitignore  README.md  environment.yml  pyproject.toml
config/: settings.json
data/: day4_chunks.json
scripts/: day4_semantic_search_demo.py  day5_bm25_vs_semantic_demo.py
src/accelerator_rag/: config.py  embedding.py  logging_config.py  main.py
src/accelerator_rag/retrieval/: bm25_baseline.py  semantic_search.py
tests/: test_config.py  test_semantic_search.py
tests/retrieval/: test_bm25_baseline.py
